# mlx86

./: .cproject  .gitmodules  .project  CMakeLists.txt  SConstruct  academy.c  academy.h  main.c  utils.c  utils.h
src/: christian_utils.cpp  christian_utils.h  main.c  main.cpp  main.h  testing.c  testing.cpp  testing.h  types.h  utils.c  utils.h  zydis.c  zydis.cpp  zydis.h
src/executors/: KVMExecutor.cpp  KVMExecutor.h  executor.h  kvm_executor.c  kvm_executor.cpp  kvm_executor.h
src/problems/: ProblemBARBuildOrder.cpp  ProblemBARBuildOrder.hpp  ProblemHelloWorld.cpp  ProblemHelloWorld.h  ProblemStarCraft2Build.cpp  ProblemStarCraft2Build.h  ProblemTravellingSalesman.cpp  ProblemTravellingSalesman.h  ProblemX86StringMatch.cpp  ProblemX86StringMatch.h  common.c  common.h  hello_world.c  parallel_tempering_hyperparameters.c  parallel_tempering_hyperparameters.cpp  problem.cpp  problem.h  problem_audio_regen.cpp  problem_audio_regen.h  problems.h  simulated_annealing_hyperparameters.c  simulated_annealing_hyperparameters.cpp  starcraft2_supplymax.c  starcraft2_supplymax.cpp  travelling_salesman.c
src/problems/darwin2021/: darwin2021.cpp  darwin2021.h  entries.csv
src/problems/rts_buildorders/: bar_game_config.cpp  bar_game_config.hpp  game.cpp  game.hpp
src/problems/rts_buildorders/BAR_game/: bar_game_config.cpp  bar_game_config.hpp  bar_game_config_metadata.hpp  bar_game_types.hpp  bar_game_unit_type_metadata_type.hpp  map_extractor.py
src/problems/rts_buildorders/BAR_game/BAR_extractor_scripts/: BAR_extractor.lua  create_c_header.sh  create_unit_enum.lua  create_unit_enum.py  desired_units.txt
src/problems/x86/: X86Common.cpp  X86Common.h  calculator.c  calculator.cpp  common.c  common.h  hybrid_x86_hyperparameters.c  hybrid_x86_hyperparameters.cpp  simple_meta.c
src/reporters/: cli_reporter.c  cli_reporter.cpp  reporter.h
src/solvers/: Solver.h  SolverHybridX86.cpp  SolverHybridX86.h  SolverParallelGreedy.cpp  SolverParallelGreedy.h  SolverParallelTempering.cpp  SolverParallelTempering.h  SolverSimpleGreedy.cpp  SolverSimpleGreedy.h  SolverSimulatedAnnealing.cpp  SolverSimulatedAnnealing.h  SolverTabuSearch.cpp  SolverTabuSearch.h  hybrid_x86.c  parallel_tempering.c  simple_genetic.c  simple_greedy.c  simulated_annealing.c  solvers.h  tabu_search.c
src/solvers/academy/: academy.c  academy.h  main.c
src/starcraft2/: .gitignore  build.sh  starcraft2.c  starcraft2.h  starcraft2_buildspec.h  starcraft2_lite.c  starcraft2_lite.h
src/starcraft2/proto/s2clientprotocol/: common.pb-c.c  common.pb-c.h  data.pb-c.c  data.pb-c.h  debug.pb-c.c  debug.pb-c.h  error.pb-c.c  error.pb-c.h  query.pb-c.c  query.pb-c.h  raw.pb-c.c  raw.pb-c.h  sc2api.pb-c.c  sc2api.pb-c.h  score.pb-c.c  score.pb-c.h  spatial.pb-c.c  spatial.pb-c.h  ui.pb-c.c  ui.pb-c.h
src/tests/: bar_buildorder_test.cpp  bar_performance_test.cpp  bar_scrambler_test.cpp  demo_game_test.cpp  executor_test.c  executor_test.cpp  hybrid_x86_test.cpp  solver_benchmark_test.c  solver_benchmark_test.cpp  starcraft2_test.c  starcraft2_test.c.bak  sudoku_test.c  testing_test.c
